--- a/machine.html
+++ b/machine.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://mtailor.workable.com/j/86AB8197A4?viewed=true'>MTailor - Jobs: ML (Machine Learning) and Backend Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/thredup/319d8b84-ceec-4d9c-97c7-5a5b89de60d8'>thredUP - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -85,7 +89,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318057002'>Job Application for Senior Backend Engineers Machine Learning  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4318057002'>Job Application for Senior Backend Engineers Machine Learning  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -115,7 +119,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999692174993-machine-learning-ai-architect'>CapTech Consulting Machine Learning &amp; AI Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -164,7 +168,7 @@ team at Vimeo is building AI-driven tools to help anyone who wants to make a?...
 <p>1 day ago ... Description. Machine Learning / Artificial Intelligence Engineer. Are you ready for 
 a career change to somewhere where you can really make a difference,?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oNrsafwA'>Numbrs Personal Finance AG Careers - Machine Learning Engineer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Numbrs engineers are innovators, problem-solvers, and hard-workers who are 
 building solutions in big data, mobile technology and much more. We look for?...</p>
@@ -215,7 +219,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://riskmethods.workable.com/j/A10570EDDA'>riskmethods - Jobs: Software Engineer Machine Learning (m/f/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -223,7 +227,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/stratus/jobs/machine-learning-researcher-b1I8DsJhCr6yRTcR_n82lY'>Machine Learning Researcher #0458 job at Stratus Solutions in College Park, MD, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -309,12 +313,12 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Machine Learning Engineer. San Francisco. Engineering. Full-time. Apply for this 
 job. Dor is a retail analytics startup that uses a first-of-its-kind hardware and?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999691878102-intern-data-science-m-f-d-machine-learning-model-compression'>E. Breuninger GmbH &amp; Co. Intern Data Science (m/f/d) Machine Learning / Model Compression | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -364,7 +368,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/b6d1de19-5e8c-4372-a234-48d3566f29f0'>Criteo - Lead Developer - Software Engineering &amp; Machine Learning</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
@@ -374,7 +378,7 @@ passionate about having a positive impact on the world. You are enthusiastic?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
+<h5><a href='https://newasurion.referrals.selectminds.com/jobs/machine-learning-engineer-6309'>Machine Learning Engineer - Asurion Careers</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -409,7 +413,7 @@ technologies to solve a variety of problems; Translate user stories and business
 Machine Learning. We are currently seeking a motivated human to join our team
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/trueaccord/66114b17-8b62-4258-9f92-ce39a239e418'>TrueAccord - Machine Learning Engineer, Infrastructure  - Lenexa, KS</a></h5> 
+<h5><a href='https://jobs.lever.co/trueaccord/66114b17-8b62-4258-9f92-ce39a239e418'>TrueAccord - Machine Learning Engineer, Infrastructure  - Lenexa, KS</a></h5> 
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -451,7 +455,7 @@ and data scientists working inside MSK. Our mission is to transform how?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mercari.workable.com/j/DEB330A0B9'>Mercari, inc. - Jobs: Software Engineer, Machine Learning [New Graduate Position] - Apply online</a></h5> 
+<h5><a href='https://mercari.workable.com/j/DEB330A0B9'>Mercari, inc. - Jobs: Software Engineer, Machine Learning [New Graduate Position] - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -463,18 +467,13 @@ and data scientists working inside MSK. Our mission is to transform how?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/jingchicorp/jobs/1344030'>Job Application for Machine Learning Engineer at WeRide.ai</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/jingchicorp/jobs/1344030'>Job Application for Machine Learning Engineer at WeRide.ai</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Machine Learning Engineer. WeRide.ai is looking for world class machine 
 learning engineer to take challenges in the area of mobility solutions. Your work 
 are?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lastline/jobs/4308625002?gh_jid=4308625002'>Job Application for Machine Learning Engineer at Lastline</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>2 days ago ... As a Machine Learning Engineer at Lastline, you will develop new machine 
-learning models and improve existing ones to enhance our network detection?...</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
